--- a/app_client/common/directives/sideBar/sideBar.template.html
+++ b/app_client/common/directives/sideBar/sideBar.template.html
@@ -3,20 +3,20 @@
     <ul class="sidebar-nav">
         <li class="sidebar-brand">
             <a href="/home">
-                Airplane App
+                Survivor App
             </a>
         </li>
         <li>
             <a href="/home">Home</a>
         </li>
        <li>
-            <a href="/airport">Airport</a>
+            <a href="/player">Player</a>
         </li>            
         <li>
-            <a href="/takeoff">Takeoff</a>
+            <a href="/tribes">Tribes</a>
         </li>
         <li>
-            <a href="/climb">Climb</a>
+            <a href="/seasons">Seasons</a>
         </li>
         <li>
             <a href="/contestants">Contestants</a>
