--- a/app_client/index.html
+++ b/app_client/index.html
@@ -25,8 +25,8 @@
     <script src="app.js"></script>
     <script src="/common/filters/temperature.filter.js"></script>
     <script src="/common/filters/percentage.filter.js"></script>    
-    <script src="/common/services/airportData.service.js"></script>
-    <script src="/common/services/airplaneData.service.js"></script>
+    <script src="/common/services/playerData.service.js"></script>
+    <script src="/common/services/survivorData.service.js"></script>
     <script src="/common/services/darkskyWeather.service.js"></script>
     <script src="/common/services/selectedData.factory.js"></script>
     <script src="/common/services/keyStore.factory.js"></script>    
@@ -36,10 +36,10 @@
     <script src="/common/directives/dateNow/dateNow.directive.js"></script>
 
     <script src="/home/home.controller.js"></script>
-    <script src="/airport/airport.controller.js"></script>
-    <script src="/climb/climb.controller.js"></script>
-    <script src="/landing/landing.controller.js"></script>
-    <script src="/takeoff/takeoff.controller.js"></script>
+    <script src="/player/player.controller.js"></script>
+    <script src="/seasons/seasons.controller.js"></script>
+    <script src="/contestants/contestants.controller.js"></script>
+    <script src="/tribes/tribes.controller.js"></script>
     <script src="/weather/weather.controller.js"></script>    
 
 
