--- a/app_client/seasons/seasons.view.html
+++ b/app_client/seasons/seasons.view.html
@@ -9,16 +9,16 @@
                 <div class="col-lg-12">
                     <h1>{{vm.content}}</h1>
                     <div class="container">
-                        <p class="bg-info" ng-bind="vm.selectedDepartureICAO.airportName"></p>
+                        <p class="bg-info" ng-bind="vm.selectedSeasonName.playerName"></p>
                         <p class="bg-info" ng-bind="vm.selectedArrivalICAO.airportName"></p>
                         <p class="bg-info" ng-bind="vm.selectedWeight.weight"></p>
                     </div>
 
                     <div class="container">
-                        <p class="bg-info"><strong>VFRI - Flaps 5</strong>: {{vm.climbData.vfri5}} KTS</p>
-                        <p class="bg-info"><strong>VFRI - Flaps 10</strong>: {{vm.climbData.vfri10}} KTS</p>
+                        <p class="bg-info"><strong>seasonName</strong>: {{vm.seasonsData.seasonsName}} name</p>
+                        <!--<p class="bg-info"><strong>VFRI - Flaps 10</strong>: {{vm.climbData.vfri10}} KTS</p>
                         <p class="bg-info"><strong>VFRI - Flaps 15</strong>: {{vm.climbData.vfri15}} KTS</p>
-                        <p class="bg-info"><strong>VCLMB</strong>: {{vm.climbData.vclmb}} KTS</p>
+                        <p class="bg-info"><strong>VCLMB</strong>: {{vm.climbData.vclmb}} KTS</p> -->
                     </div>
 
                     <!--<a href="#menu-toggle" class="btn btn-default" id="menu-toggle" ng-click="toggleMenu">Toggle Menu</a>-->
