OMDB pages updated

--- a/app_client/common/directives/sideBar/sideBar.template.html
+++ b/app_client/common/directives/sideBar/sideBar.template.html
@@ -22,7 +22,7 @@
             <a href="/contestants">Contestants</a>
         </li>
         <li>
-            <a href="/weather">Weather</a>
+            <a href="/omdb">Omdb</a>
         </li>
     </ul>
 </div>
