--- a/app_client/index.html
+++ b/app_client/index.html
@@ -27,12 +27,12 @@
     <script src="/common/filters/percentage.filter.js"></script>    
     <script src="/common/services/playerData.service.js"></script>
     <script src="/common/services/survivorData.service.js"></script>
-    <script src="/common/services/darkskyWeather.service.js"></script>
+    <script src="/common/services/onlinemovieDatabase.service.js"></script>
     <script src="/common/services/selectedData.factory.js"></script>
     <script src="/common/services/keyStore.factory.js"></script>    
     <script src="/common/directives/sideBar/sideBar.directive.js"></script>
     <script src="/common/directives/footerGeneric/footerGeneric.directive.js"></script>
-    <script src="/common/directives/weatherInfo/weatherInfo.directive.js"></script>
+    <script src="/common/directives/omdbInfo/omdbInfo.directive.js"></script>
     <script src="/common/directives/dateNow/dateNow.directive.js"></script>
 
     <script src="/home/home.controller.js"></script>
@@ -40,7 +40,7 @@
     <script src="/seasons/seasons.controller.js"></script>
     <script src="/contestants/contestants.controller.js"></script>
     <script src="/tribes/tribes.controller.js"></script>
-    <script src="/weather/weather.controller.js"></script>    
+    <script src="/omdb/omdb.controller.js"></script>    
 
 
     <script src="/javascripts/jquery-3.1.1.min.js"></script>
