--- a/app_client/player/player.view.html
+++ b/app_client/player/player.view.html
@@ -36,6 +36,16 @@
                                         ng-options="contestant.contestantName for contestant in vm.contestantsData"></select>
                                 <p class="bg-info" ng-bind="vm.selectedContestantName.contestantName"></p>
                             </div>   
+                            
+                            <div class="form-group">
+                                <label for="selectSeasonName">Season Name</label>
+                                <select id="selectSeasonName" 
+                                        class="form-control" 
+                                        ng-model="vm.selectedSeasonName" 
+                                        ng-options="season.seasonName for season in vm.seasonsData"></select>
+                                <p class="bg-info" ng-bind="vm.selectedSeasonName.seasonName"></p>
+                            </div>   
+                            <!--
                             <div class="form-group">
                                 <label for="selectSeasonName">Season</label>
                                 <select id="selectSeasonName" 
@@ -44,6 +54,7 @@
                                         ng-options="seasons.seasonName for seasons in vm.seasonsData"></select>
                                 <p class="bg-info" ng-bind="vm.selectedSeasonName.seasonName"></p>
                             </div>
+                            -->
                             <div class="form-group">
                                 <label for="selectWeight">Aircraft Weight (KG)</label>
                                 <select id="selectWeight" 
