--- a/app_client/omdb/omdb.view.html
+++ b/app_client/omdb/omdb.view.html
@@ -7,7 +7,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>{{vm.content}}</h1>
-                        <p class="bg-info" ng-bind="vm.selectedDepartureICAO.airportName"></p>
+                        <p class="bg-info" ng-bind="vm.selectedTitle.survivorName"></p>
                         <weather-info info="vm.departureWeather"></weather-info>
                         <p class="bg-info" ng-bind="vm.selectedArrivalICAO.airportName"></p>
                         <weather-info info="vm.arrivalWeather"></weather-info>                        
